attdendance report added

--- a/src/app/modules/attendance/studentattendance/studentattendance.component.html
+++ b/src/app/modules/attendance/studentattendance/studentattendance.component.html
@@ -68,7 +68,7 @@
     </ng-container>
     <ng-container matColumnDef="Action">
         <mat-header-cell *matHeaderCellDef>
-            <button [disabled]="loading || !EnableSave || Permission=='read' || !AnyEnableSave"
+            <button [disabled]="loading || !EnableSave || Permission=='read'"
                 *ngIf="StudentAttendanceList.length>0" matTooltip="save all" mat-mini-fab (click)="saveall()">
                 <mat-icon>all_out</mat-icon>
                 <mat-icon *ngIf="loading">
@@ -78,7 +78,7 @@
         </mat-header-cell>
         <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
             <button [disabled]="loading || !element.Action || Permission=='read' || !EnableSave" matTooltip="view/edit"
-                mat-raised-button color="accent" (click)="UpdateOrSave(element)">
+                mat-raised-button color="accent" (click)="SaveRow(element)">
                 <mat-icon>save</mat-icon>
                 <mat-icon *ngIf="loading">
                     <mat-spinner diameter="20" color="Blue"></mat-spinner>
@@ -89,3 +89,4 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
 </mat-table>
+<mat-paginator style="display:flex;justify-content: center;" [pageSizeOptions]="[10,20,50,75]"></mat-paginator>
