--- a/src/app/modules/evaluation/classevaluation/classevaluation.component.html
+++ b/src/app/modules/evaluation/classevaluation/classevaluation.component.html
@@ -125,7 +125,7 @@
                 </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
-                        <button [disabled]="loading || Permission=='read'" matTooltip="add new child" mat-mini-fab
+                        <button [disabled]="loading || Permission=='read'" matTooltip="add new" mat-mini-fab
                             (click)="AddNew()">
                             <mat-icon>add</mat-icon>
                         </button>
