--- a/src/app/modules/classes/classsmastermapping/classmasterdashboard.component.scss
+++ b/src/app/modules/classes/classsmastermapping/classmasterdashboard.component.scss
@@ -12,6 +12,6 @@ button{
 .mat-column-Section,.mat-column-Active,.mat-column-Action{
     flex:0 0 100px;
  }
- .mat-column-TeacherId{
-     flex: 0 0 300px;
+ .mat-column-HelperId,.mat-column-TeacherId{
+     flex: 0 0 250px;
  }
