--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -59,6 +59,7 @@
                                        || element.MasterDataName=='Employee'
                                        || element.MasterDataName=='Employee Upload'
                                        || element.MasterDataName=='Cash'
+                                       || element.MasterDataName=='Helper'  
                                        || element.MasterDataName=='Teaching'  
                                        || element.MasterDataName=='Non Teaching')" matInput
                         [value]="element.MasterDataName" [(ngModel)]="element.MasterDataName" autocomplete="Off"
@@ -157,6 +158,7 @@
                                        || element.MasterDataName=='Employee'
                                        || element.MasterDataName=='Employee Upload'
                                        || element.MasterDataName=='Cash'
+                                       || element.MasterDataName=='Helper'
                                        || element.MasterDataName=='Teaching'  
                                        || element.MasterDataName=='Non Teaching'))
                 " style="margin-right:15px;" matTooltip="save" mat-raised-button color="accent"
@@ -183,6 +185,7 @@
                                        || element.MasterDataName=='Employee'
                                        || element.MasterDataName=='Employee Upload'
                                        || element.MasterDataName=='Cash'
+                                       || element.MasterDataName=='Helper'
                                        || element.MasterDataName=='Teaching'  
                                        || element.MasterDataName=='Non Teaching'
                                        || Permission !='rwd'))" 
