--- a/src/app/modules/attendance/attendancereport/attendancereport.component.html
+++ b/src/app/modules/attendance/attendancereport/attendancereport.component.html
@@ -2,14 +2,14 @@
 <!-- <alert></alert> -->
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <form [formGroup]="searchForm">
-    <mat-form-field appearance="outline">
+    <!-- <mat-form-field appearance="outline">
         <mat-label>Class</mat-label>
         <mat-select formControlName="searchClassId" (selectionChange)="bindClassSubject()">
             <mat-option value="0">select</mat-option>
             <mat-option *ngFor="let item of Classes" [value]="item.ClassId">{{item.ClassName}}
             </mat-option>
         </mat-select>
-    </mat-form-field>
+    </mat-form-field> -->
     <!-- <mat-form-field appearance="outline">
         <mat-label>Section</mat-label>
         <mat-select formControlName="searchSectionId">
