--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
@@ -2,7 +2,7 @@ mat-form-field{
     margin-right: 15px;
     width:98%;
 }
-.mat-column-StudentClassId{
+.mat-column-AdmissionNo{
     justify-content: center;
     flex:1 1 100px;
 }
