--- a/src/app/modules/schooltimetable/teachersubject/teachersubject.component.scss
+++ b/src/app/modules/schooltimetable/teachersubject/teachersubject.component.scss
@@ -1,16 +1,16 @@
 mat-form-field{
     margin-right: 15px;
+    width:98%;
 }
-.mat-column-ClassName,
 .mat-column-ClassSubjectId,
 .mat-column-EmployeeId,
 .mat-column-ClsName{
-    justify-content: center;
-    flex:1 1 120px;
+   // justify-content: center;
+    flex:1 0 120px;
 }
 .mat-column-Active,.mat-column-Action{
     justify-content: center;
-    flex:1 1 100px;
+    flex:1 0 100px;
 }
 .mat-column-TeacherSubjectId
 {
