--- a/src/app/modules/schoolreports/today-collection/today-collection.component.html
+++ b/src/app/modules/schoolreports/today-collection/today-collection.component.html
@@ -5,6 +5,14 @@
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <form [formGroup]="SearchForm">
     <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="15px">
+        <mat-form-field appearance="outline" [style.width.px]="150">
+            <mat-label>Class</mat-label>
+            <mat-select formControlName="searchClassId">
+                <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                    {{item.ClassName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
         <mat-form-field [style.width.px]="250" appearance="outline">
             <mat-label>Name-class-section-roll no</mat-label>
             <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
