--- a/src/app/modules/schooltimetable/teachersubject/teachersubject.component.html
+++ b/src/app/modules/schooltimetable/teachersubject/teachersubject.component.html
@@ -4,7 +4,7 @@
         <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <!-- <alert></alert> -->
         <form [formGroup]="searchForm">
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline" style="width:200px">
                 <mat-label>Teacher</mat-label>
                 <mat-select formControlName="searchEmployeeId" (selectionChange)="GetSelectedClassSubjects()">
                     <mat-option value="0">select</mat-option>
@@ -13,7 +13,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline" style="width:200px">
                 <mat-label>Class</mat-label>
                 <mat-select formControlName="searchClassId" (selectionChange)="GetSelectedClassSubjects()">
                     <mat-option value="0">select</mat-option>
