--- a/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
+++ b/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
@@ -62,7 +62,7 @@
                 <div fxLayout="row" fxLayoutAlign="space-between center">
                     <span style="padding: 15px 15px 15px 0px;">
                         Received with thanks from <b>{{studentInfoTodisplay.StudentName}}</b>,
-                        Admission No. - <b>{{studentInfoTodisplay.StudentClassId}}</b>,
+                        Admission No. - <b>{{studentInfoTodisplay.AdmissionNo}}</b>,
                         {{studentInfoTodisplay.StudentClassName}}, Sec - {{studentInfoTodisplay.SectionName}},
                         Roll no. - {{studentInfoTodisplay.RollNo}}.
                     </span>
