--- a/src/app/modules/studentexam/exams/exams.component.scss
+++ b/src/app/modules/studentexam/exams/exams.component.scss
@@ -20,9 +20,9 @@ mat-cell:first-of-type {
 {
     flex:1 0 135px;
 }
-.mat-column-Sequence,
-.mat-column-AttendanceModeId{
-    flex:1 0 100px;
+//.mat-column-Sequence,
+.mat-column-AttendanceStartDate{
+    flex:1 0 140px;
 }
 .mat-column-Action,.mat-column-Active,.mat-column-ReleaseResult {
     justify-content: center;
